--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-loader": "^4.12.18"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "debug": "^4.1.1",
     "olt": "0.0.1",
     "poi": "^12.7.5",
