--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-hot-loader": "^4.12.18"
   },
   "dependencies": {
+    "@snackbar/core": "^1.7.0",
     "classnames": "^2.2.6",
+    "copy-to-clipboard": "^3.2.0",
     "crypto-random-string": "^3.0.1",
     "debug": "^4.1.1",
     "olt": "0.0.1",
