--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "olt": "0.0.1",
     "poi": "^12.7.5",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "yields-store": "^1.0.2"
   }
 }
